# ESCape32

./: CMakeLists.txt  README.md  targets.cmake
.github/workflows/: build.yml  release.yml
boot/: CMakeLists.txt
boot/mcu/: common.ld
boot/mcu/STM32F0/: config.c  config.cmake  config.h  config.ld
boot/mcu/STM32G0/: config.c  config.cmake  config.h
boot/mcu/STM32G4/: config.c  config.cmake  config.h
boot/src/: common.h  io.c  main.c  util.c
mcu/: common.ld
mcu/AT32F421/: config.c  config.cmake  config.h  preset.c
mcu/GD32E230/: config.c  config.cmake  config.h  config.ld  preset.c
mcu/GD32F350/: config.c  config.cmake  config.h  config.ld  preset.c
mcu/STM32F031/: config.c  config.cmake  config.h  config.ld
mcu/STM32F051/: config.c  config.h  config.ld  preset.c
mcu/STM32G071/: config.c  config.cmake  config.h  config.ld  preset.c
mcu/STM32G431/: config.c  config.cmake  config.h  preset.c
mcu/STM32L431/: config.c  config.cmake  config.h  config.ld  preset.c
mcu/STSPIN32F0/: config.c  config.h  config.ld
src/: cli.c  common.h  defs.h  io.c  led.c  main.c  prog.c  telem.c  util.c
